--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New-year-new-me</title>
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- banner section -->
+  <header class="header">
+    <div class="banner">
+    <h1 class="banner-header">All Thinks Are Possible If You believe</h1>
+    <p class="banner-title">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+    <button class="btn-secondary">Contact Us</button>
+  </div>
+  
+  
+
+
+  </header>
+  <!-- banner section -->
   
 </body>
 </html>
