added watch section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </header>
   <!-- banner section -->
   <!-- my failure failure-sectionsection -->
+  <main>
   <section>
     <div class="failure">
       <div class="failure-picture">
@@ -48,6 +49,47 @@
   <!-- end failure section -->
    
    <!-- start my plan section -->
+   <section >
+    <div class="all-plan">
+    <h1 class="plan-heading">My Plans</h1>
+    <div class="my-plan">
+      <div class="plan-details">
+        <img src="../New-year-new-me/images/icons/web.png" alt="">
+        <h3>Web Development</h3>
+        <h5>I want to start</h5>
+      </div>
+      <div class="plan-details">
+        <img src="./images/icons/js.png" alt="">
+        <h3>Javascript</h3>
+        <h5>I want to learn</h5>
+      </div>
+      <div class="plan-details">
+        <img src="./images/icons/smoke.png" alt="">
+        <h3>Smoking Habit</h3>
+        <h5>I want to end</h5>
+      </div>
+      <div class="plan-details">
+        <img src="./images/icons/ecom.png" alt="">
+        <h3>ecommerce</h3>
+        <h5>I want to develop</h5>
+      </div>
+    </div>
+  </div>
+   </section>
+   <!-- end my plan section -->
+   <section>
+   <!-- watch section -->
+   <div class="watch-section">
+   <h3 class="watch-header">Awlays keep a positive mindset</h3>
+   <button class="btn-primary">Call Now</button>
+  </div>
+  </section>
+  <!-- footer section -->
+  <section>
+
+  </section>
+  </main>
+
 
   
 </body>
