--- a/index.html
+++ b/index.html
@@ -80,11 +80,31 @@
    <section>
    <!-- watch section -->
    <div class="watch-section">
-   <h3 class="watch-header">Awlays keep a positive mindset</h3>
+   <h3 class="watch-header">Awlays keep a positive <br>mindset</h3>
    <button class="btn-primary">Call Now</button>
   </div>
   </section>
   <!-- footer section -->
+  <div class="footer">
+    <div class="right-side">
+      <h1 class="right-heading">Future</h1>
+      <p class="footer-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+      <p>Email : info@gmail.com</p>
+      <p>Phone : 01500 00 00 00</p>
+      <img src="../New-year-new-me/images/icons/fb.png"></img>
+      <img src="../New-year-new-me/images/icons/twitter.png"></img>
+      <img src="../New-year-new-me/images/icons/youtube.png"></img>
+
+    </div>
+    <div class="left-side">
+      <h4 class="subscribe">Subscribe</h4>
+      <form action="">
+       <input class="email" type="email" name="" id="" placeholder="Enter your email">
+       <br>
+       <input class="btn-primary" type="button" value="Subscribe">
+      </form>
+    </div>
+  </div>
   <section>
 
   </section>
